BigFloatTriangle2D caching inCircle constant expressions.